[package]
name = "digest_is_secure"
version = "0.1.0"
authors = ["Toshiki Iwasaki <boledshrimps0109@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
md5 = "0.5.0"